--- a/package.json
+++ b/package.json
@@ -7,13 +7,12 @@
   ],
   "scripts": {
     "check": "oxlint",
-    "dev": "turbo dev --filter=!crew --filter=!handbook",
+    "dev": "turbo dev --filter=!crew",
     "dev:events": "turbo -F events dev",
-    "build": "turbo build --filter=!handbook --filter=!crew",
+    "build": "turbo build --filter=!crew",
     "check-types": "turbo check-types",
     "dev:backstage": "turbo dev --filter=backstage",
     "dev:frontrow": "turbo -F frontrow dev",
-    "dev:handbook": "turbo -F handbook dev",
     "dev:crew": "turbo -F crew dev",
     "dev:honoken": "turbo -F honoken dev",
     "db:push": "turbo db:push --filter=database",
@@ -23,12 +22,12 @@
     "db:migrate": "turbo db:migrate --filter=database",
     "db:migrate:preview": "drizzle-kit migrate --config=packages/database/drizzle.preview.config.ts",
     "dev:inngest:events": "npx inngest-cli@latest dev -u http://localhost:3000/api/inngest",
-    "neon": "bun packages/cli-utils/src/cli/neon.ts",
-    "vercel": "bun packages/cli-utils/src/cli/vercel.ts",
-    "onboard": "bun packages/cli-utils/src/cli/onboard.ts",
-    "env:pull": "bun packages/cli-utils/src/cli/vercel.ts pull",
-    "db:branch:new": "bun packages/cli-utils/src/cli/neon.ts create",
-    "db:branch:delete": "bun packages/cli-utils/src/cli/neon.ts delete"
+    "neon": "bun packages/cli-monorepo/src/cli/neon.ts",
+    "vercel": "bun packages/cli-monorepo/src/cli/vercel.ts",
+    "onboard": "bun packages/cli-monorepo/src/cli/onboard.ts",
+    "env:pull": "bun packages/cli-monorepo/src/cli/vercel.ts pull",
+    "db:branch:new": "bun packages/cli-monorepo/src/cli/neon.ts create",
+    "db:branch:delete": "bun packages/cli-monorepo/src/cli/neon.ts delete"
   },
   "dependencies": {
     "@effect/schema": "^0.75.5",
