feat(frontrow): enhance ticket panel with testing setup and UI improvements
- Added Vitest configuration and setup files for testing.
- Implemented unit tests for CartFooter, QuantityStepper, TicketCard, TicketList, and TicketPrice components.
- Updated CartFooter to handle checkout disabled state.
- Enhanced TicketCard and TicketPrice components for better UI and functionality.
- Introduced mock data for ticket testing scenarios.
- Adjusted package dependencies to include @testing-library/jest-dom and vitest for improved testing capabilities.

--- a/biome.json
+++ b/biome.json
@@ -54,8 +54,11 @@
       ],
       "linter": {
         "rules": {
+          "performance": {
+            "useTopLevelRegex": "off",
+          },
           "suspicious": {
-            "noExplicitAny": "off"
+            "noExplicitAny": "off",
           }
         }
       }
