--- a/apps/frontrow/package.json
+++ b/apps/frontrow/package.json
@@ -5,7 +5,9 @@
   "scripts": {
     "build": "vite build",
     "serve": "vite preview",
-    "dev": "vite dev --port=3004"
+    "dev": "vite dev --port=3004",
+    "test": "vitest run",
+    "test:watch": "vitest"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.14",
@@ -40,6 +42,7 @@
     "@tanstack/react-query-devtools": "^5.90.2",
     "@tanstack/react-router-devtools": "^1.132.31",
     "@testing-library/dom": "^10.4.1",
+    "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.0",
     "@types/react": "^19.2.0",
     "@types/react-dom": "^19.2.0",
@@ -47,6 +50,7 @@
     "jsdom": "^27.0.0",
     "typescript": "^5.9.3",
     "vite": "^7.1.7",
+    "vitest": "^2.1.4",
     "web-vitals": "^5.1.0"
   }
 }
