--- a/apps/frontrow/tsconfig.json
+++ b/apps/frontrow/tsconfig.json
@@ -5,8 +5,7 @@
     "jsx": "react-jsx",
     "module": "ESNext",
     "lib": ["ES2022", "DOM", "DOM.Iterable"],
-    "types": ["vite/client", "node"],
-
+    "types": ["vite/client", "node", "vitest", "@testing-library/jest-dom"],
     "moduleResolution": "bundler",
     "allowImportingTsExtensions": true,
     "verbatimModuleSyntax": true,
