Update dependencies and improve auth middleware
- Added new dependencies to the frontrow app, including @dinero.js/currencies and @tanstack/react-db.
- Updated the auth middleware in the auth app to enhance session handling and event tracking.
- Adjusted the turbo.json configuration to ensure proper task dependencies for builds.
- Removed outdated files from the database package to streamline the codebase.

--- a/apps/auth/turbo.json
+++ b/apps/auth/turbo.json
@@ -1,9 +1,12 @@
 {
-  "$schema": "https://turbo.build/schema.json",
-  "extends": ["//"],
-  "tasks": {
-    "build": {
-      "outputs": [],
+	"$schema": "https://turbo.build/schema.json",
+	"extends": ["//"],
+	"tasks": {
+		"build": {
+			"outputs": [],
+			"dependsOn": ["database#build", "inngest-kit#build"]
+		},
+	  "dev": {
       "dependsOn": ["database#build", "inngest-kit#build"]
     }
   }
