--- a/apps/frontrow/package.json
+++ b/apps/frontrow/package.json
@@ -1,56 +1,60 @@
 {
-  "name": "frontrow",
-  "private": true,
-  "type": "module",
-  "scripts": {
-    "build": "vite build",
-    "serve": "vite preview",
-    "dev": "vite dev --port=3004",
-    "test": "vitest run",
-    "test:watch": "vitest"
-  },
-  "dependencies": {
-    "@tailwindcss/vite": "^4.1.14",
-    "@tanstack/devtools-vite": "^0.3.3",
-    "@tanstack/nitro-v2-vite-plugin": "^1.132.31",
-    "@tanstack/react-form": "^1.23.5",
-    "@tanstack/react-pacer": "^0.16.4",
-    "@tanstack/react-query": "^5.90.2",
-    "@tanstack/react-router": "^1.132.31",
-    "@tanstack/react-router-with-query": "^1.130.17",
-    "@tanstack/react-start": "^1.132.31",
-    "@tanstack/router-plugin": "^1.132.31",
-    "better-auth": "^1.3.24",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "database": "workspace:*",
-    "framer-motion": "^12.23.22",
-    "lucide-react": "^0.544.0",
-    "next-themes": "^0.4.6",
-    "radix-ui": "^1.4.3",
-    "react": "19.2.0",
-    "react-dom": "19.2.0",
-    "sonner": "^2.0.7",
-    "tailwind-merge": "^3.3.1",
-    "tailwindcss": "^4.1.14",
-    "tw-animate-css": "^1.4.0",
-    "vite-tsconfig-paths": "^5.1.4",
-    "zod": "^4.1.11"
-  },
-  "devDependencies": {
-    "@tanstack/react-devtools": "^0.7.1",
-    "@tanstack/react-query-devtools": "^5.90.2",
-    "@tanstack/react-router-devtools": "^1.132.31",
-    "@testing-library/dom": "^10.4.1",
-    "@testing-library/jest-dom": "^6.9.1",
-    "@testing-library/react": "^16.3.0",
-    "@types/react": "^19.2.0",
-    "@types/react-dom": "^19.2.0",
-    "@vitejs/plugin-react": "^5.0.4",
-    "jsdom": "^27.0.0",
-    "typescript": "^5.9.3",
-    "vite": "^7.1.7",
-    "vitest": "^2.1.4",
-    "web-vitals": "^5.1.0"
-  }
+	"name": "frontrow",
+	"private": true,
+	"type": "module",
+	"scripts": {
+		"build": "vite build",
+		"serve": "vite preview",
+		"dev": "vite dev --port=3004",
+		"test": "vitest run",
+		"test:watch": "vitest"
+	},
+	"dependencies": {
+		"@dinero.js/currencies": "2.0.0-alpha.14",
+		"@tailwindcss/vite": "^4.1.14",
+		"@tanstack/devtools-vite": "^0.3.3",
+		"@tanstack/nitro-v2-vite-plugin": "^1.132.31",
+		"@tanstack/react-db": "^0.1.30",
+		"@tanstack/react-form": "^1.23.5",
+		"@tanstack/react-pacer": "^0.16.4",
+		"@tanstack/react-query": "^5.90.2",
+		"@tanstack/react-router": "^1.132.31",
+		"@tanstack/react-router-with-query": "^1.130.17",
+		"@tanstack/react-start": "^1.132.31",
+		"@tanstack/router-plugin": "^1.132.31",
+		"better-auth": "^1.3.24",
+		"class-variance-authority": "^0.7.1",
+		"clsx": "^2.1.1",
+		"database": "workspace:*",
+		"dinero.js": "^2.0.0-alpha.14",
+		"framer-motion": "^12.23.22",
+		"install": "^0.13.0",
+		"lucide-react": "^0.544.0",
+		"next-themes": "^0.4.6",
+		"radix-ui": "^1.4.3",
+		"react": "19.2.0",
+		"react-dom": "19.2.0",
+		"sonner": "^2.0.7",
+		"tailwind-merge": "^3.3.1",
+		"tailwindcss": "^4.1.14",
+		"tw-animate-css": "^1.4.0",
+		"vite-tsconfig-paths": "^5.1.4",
+		"zod": "^4.1.11"
+	},
+	"devDependencies": {
+		"@tanstack/react-devtools": "^0.7.1",
+		"@tanstack/react-query-devtools": "^5.90.2",
+		"@tanstack/react-router-devtools": "^1.132.31",
+		"@testing-library/dom": "^10.4.1",
+		"@testing-library/jest-dom": "^6.9.1",
+		"@testing-library/react": "^16.3.0",
+		"@types/react": "^19.2.0",
+		"@types/react-dom": "^19.2.0",
+		"@vitejs/plugin-react": "^5.0.4",
+		"jsdom": "^27.0.0",
+		"typescript": "^5.9.3",
+		"vite": "^7.1.7",
+		"vitest": "^2.1.4",
+		"web-vitals": "^5.1.0"
+	}
 }
