--- a/.gitignore
+++ b/.gitignore
@@ -2,11 +2,9 @@ node_modules
 .turbo
 .vercel
 .env*.local
-context/backup/
-/context/backup/**
+/context-local/**
 .neon-last-branch
-*.DS_STORE
-.DS_Store
+**/.DS_Store
 # Ignore build outputs
 /dist/
 **/dist/
