--- a/biome.json
+++ b/biome.json
@@ -1,8 +1,7 @@
 {
   "$schema": "https://biomejs.dev/schemas/2.1.2/schema.json",
   "files": {
-    "ignoreUnknown": false,
-    "ignore": ["context", "context/**"]
+    "ignoreUnknown": false
   },
   "extends": ["ultracite"],
   "linter": {
@@ -36,7 +35,7 @@
       }
     },
     {
-      "includes": ["packages/cli-monorepo/src/**/*.ts"],
+      "includes": ["packages/cli-utils/cli-repo/src/**/*.ts"],
       "linter": {
         "rules": {
           "suspicious": {
@@ -71,18 +70,7 @@
         "apps/frontrow/src/routes/**/*.tsx"
       ],
       "linter": {
-        "rules": {
-          "nursery": {
-            "noRestrictedImports": {
-              "level": "error",
-              "options": {
-                "paths": {
-                  "@/vendor/*": "Import adapters from @/components/ui/* instead of vendor primitives"
-                }
-              }
-            }
-          }
-        }
+        "rules": {}
       }
     }
   ]
