--- a/apps/frontrow/package.json
+++ b/apps/frontrow/package.json
@@ -33,6 +33,7 @@
 		"clsx": "^2.1.1",
 		"colorjs.io": "^0.5.2",
 		"database": "workspace:*",
+		"date-fns": "^4.1.0",
 		"dinero.js": "^2.0.0-alpha.14",
 		"framer-motion": "^12.23.22",
 		"install": "^0.13.0",
@@ -48,6 +49,7 @@
 		"sonner": "^2.0.7",
 		"tailwind-merge": "^3.3.1",
 		"tailwindcss": "^4.1.14",
+		"ts-pattern": "^5.9.0",
 		"tw-animate-css": "^1.4.0",
 		"vite-tsconfig-paths": "^5.1.4",
 		"zod": "^4.1.11"
